# puremetal

./: .gitignore  CMakeLists.txt  pure_metal.kdev4
input/: fixed_test.xml  stable_1_1.xml  stable_1_4.xml  stable_test.xml  steady_state_1_1.xml  steady_state_1_4.xml  steady_state_karma01.xml  steady_state_karma02.xml  steady_state_karma03.xml  steady_state_karma04.xml  steady_state_karma05.xml  steady_state_karma06.xml  steady_state_karma07.xml  steady_state_karma08.xml  steady_state_karma09.xml  steady_state_karma10.xml  steady_state_karma11.xml  steady_state_test.xml
src/: approximation.cpp  approximation.hpp  csplineinterpolant.cpp  csplineinterpolant.hpp  csplinepostprocessor.hpp  datfile.cpp  datfile.hpp  field.cpp  field.hpp  fulldomainapproximation.hpp  fulldomainfield.hpp  interpolant.hpp  main.cpp  messages.cpp  messages.hpp  options.cpp  options.hpp  polynomialinterpolant.cpp  polynomialinterpolant.hpp  polynomialpostprocessor.hpp  postprocessor.cpp  postprocessor.hpp  quarterdomainapproximation.hpp  quarterdomainfield.hpp  simulation.cpp  simulation.hpp  specifications.cpp  specifications.hpp  visitfile.cpp  visitfile.hpp  vtkfile.cpp  vtkfile.hpp
